--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -778,6 +778,511 @@
     "\n",
     "day8part2()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 10: Cathode-Ray Tube"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = \"\"\"addx 15\n",
+    "addx -11\n",
+    "addx 6\n",
+    "addx -3\n",
+    "addx 5\n",
+    "addx -1\n",
+    "addx -8\n",
+    "addx 13\n",
+    "addx 4\n",
+    "noop\n",
+    "addx -1\n",
+    "addx 5\n",
+    "addx -1\n",
+    "addx 5\n",
+    "addx -1\n",
+    "addx 5\n",
+    "addx -1\n",
+    "addx 5\n",
+    "addx -1\n",
+    "addx -35\n",
+    "addx 1\n",
+    "addx 24\n",
+    "addx -19\n",
+    "addx 1\n",
+    "addx 16\n",
+    "addx -11\n",
+    "noop\n",
+    "noop\n",
+    "addx 21\n",
+    "addx -15\n",
+    "noop\n",
+    "noop\n",
+    "addx -3\n",
+    "addx 9\n",
+    "addx 1\n",
+    "addx -3\n",
+    "addx 8\n",
+    "addx 1\n",
+    "addx 5\n",
+    "noop\n",
+    "noop\n",
+    "noop\n",
+    "noop\n",
+    "noop\n",
+    "addx -36\n",
+    "noop\n",
+    "addx 1\n",
+    "addx 7\n",
+    "noop\n",
+    "noop\n",
+    "noop\n",
+    "addx 2\n",
+    "addx 6\n",
+    "noop\n",
+    "noop\n",
+    "noop\n",
+    "noop\n",
+    "noop\n",
+    "addx 1\n",
+    "noop\n",
+    "noop\n",
+    "addx 7\n",
+    "addx 1\n",
+    "noop\n",
+    "addx -13\n",
+    "addx 13\n",
+    "addx 7\n",
+    "noop\n",
+    "addx 1\n",
+    "addx -33\n",
+    "noop\n",
+    "noop\n",
+    "noop\n",
+    "addx 2\n",
+    "noop\n",
+    "noop\n",
+    "noop\n",
+    "addx 8\n",
+    "noop\n",
+    "addx -1\n",
+    "addx 2\n",
+    "addx 1\n",
+    "noop\n",
+    "addx 17\n",
+    "addx -9\n",
+    "addx 1\n",
+    "addx 1\n",
+    "addx -3\n",
+    "addx 11\n",
+    "noop\n",
+    "noop\n",
+    "addx 1\n",
+    "noop\n",
+    "addx 1\n",
+    "noop\n",
+    "noop\n",
+    "addx -13\n",
+    "addx -19\n",
+    "addx 1\n",
+    "addx 3\n",
+    "addx 26\n",
+    "addx -30\n",
+    "addx 12\n",
+    "addx -1\n",
+    "addx 3\n",
+    "addx 1\n",
+    "noop\n",
+    "noop\n",
+    "noop\n",
+    "addx -9\n",
+    "addx 18\n",
+    "addx 1\n",
+    "addx 2\n",
+    "noop\n",
+    "noop\n",
+    "addx 9\n",
+    "noop\n",
+    "noop\n",
+    "noop\n",
+    "addx -1\n",
+    "addx 2\n",
+    "addx -37\n",
+    "addx 1\n",
+    "addx 3\n",
+    "noop\n",
+    "addx 15\n",
+    "addx -21\n",
+    "addx 22\n",
+    "addx -6\n",
+    "addx 1\n",
+    "noop\n",
+    "addx 2\n",
+    "addx 1\n",
+    "noop\n",
+    "addx -10\n",
+    "noop\n",
+    "noop\n",
+    "addx 20\n",
+    "addx 1\n",
+    "addx 2\n",
+    "addx 2\n",
+    "addx -6\n",
+    "addx -11\n",
+    "noop\n",
+    "noop\n",
+    "noop\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['addx 15',\n",
+       " 'addx -11',\n",
+       " 'addx 6',\n",
+       " 'addx -3',\n",
+       " 'addx 5',\n",
+       " 'addx -1',\n",
+       " 'addx -8',\n",
+       " 'addx 13',\n",
+       " 'addx 4',\n",
+       " 'noop',\n",
+       " 'addx -1',\n",
+       " 'addx 5',\n",
+       " 'addx -1',\n",
+       " 'addx 5',\n",
+       " 'addx -1',\n",
+       " 'addx 5',\n",
+       " 'addx -1',\n",
+       " 'addx 5',\n",
+       " 'addx -1',\n",
+       " 'addx -35',\n",
+       " 'addx 1',\n",
+       " 'addx 24',\n",
+       " 'addx -19',\n",
+       " 'addx 1',\n",
+       " 'addx 16',\n",
+       " 'addx -11',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx 21',\n",
+       " 'addx -15',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx -3',\n",
+       " 'addx 9',\n",
+       " 'addx 1',\n",
+       " 'addx -3',\n",
+       " 'addx 8',\n",
+       " 'addx 1',\n",
+       " 'addx 5',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx -36',\n",
+       " 'noop',\n",
+       " 'addx 1',\n",
+       " 'addx 7',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx 2',\n",
+       " 'addx 6',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx 1',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx 7',\n",
+       " 'addx 1',\n",
+       " 'noop',\n",
+       " 'addx -13',\n",
+       " 'addx 13',\n",
+       " 'addx 7',\n",
+       " 'noop',\n",
+       " 'addx 1',\n",
+       " 'addx -33',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx 2',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx 8',\n",
+       " 'noop',\n",
+       " 'addx -1',\n",
+       " 'addx 2',\n",
+       " 'addx 1',\n",
+       " 'noop',\n",
+       " 'addx 17',\n",
+       " 'addx -9',\n",
+       " 'addx 1',\n",
+       " 'addx 1',\n",
+       " 'addx -3',\n",
+       " 'addx 11',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx 1',\n",
+       " 'noop',\n",
+       " 'addx 1',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx -13',\n",
+       " 'addx -19',\n",
+       " 'addx 1',\n",
+       " 'addx 3',\n",
+       " 'addx 26',\n",
+       " 'addx -30',\n",
+       " 'addx 12',\n",
+       " 'addx -1',\n",
+       " 'addx 3',\n",
+       " 'addx 1',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx -9',\n",
+       " 'addx 18',\n",
+       " 'addx 1',\n",
+       " 'addx 2',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx 9',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx -1',\n",
+       " 'addx 2',\n",
+       " 'addx -37',\n",
+       " 'addx 1',\n",
+       " 'addx 3',\n",
+       " 'noop',\n",
+       " 'addx 15',\n",
+       " 'addx -21',\n",
+       " 'addx 22',\n",
+       " 'addx -6',\n",
+       " 'addx 1',\n",
+       " 'noop',\n",
+       " 'addx 2',\n",
+       " 'addx 1',\n",
+       " 'noop',\n",
+       " 'addx -10',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'addx 20',\n",
+       " 'addx 1',\n",
+       " 'addx 2',\n",
+       " 'addx 2',\n",
+       " 'addx -6',\n",
+       " 'addx -11',\n",
+       " 'noop',\n",
+       " 'noop',\n",
+       " 'noop']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = temp.strip().split(\"\\n\")\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_instructions = [\n",
+    "    'addx 15', 'addx -11', 'addx 6', 'addx -3', 'addx 5', 'addx -1', 'addx -8',\n",
+    "    'addx 13', 'addx 4', 'noop', 'addx -1', 'addx 5', 'addx -1', 'addx 5',\n",
+    "    'addx -1', 'addx 5', 'addx -1', 'addx 5', 'addx -1', 'addx -35', 'addx 1',\n",
+    "    'addx 24', 'addx -19', 'addx 1', 'addx 16', 'addx -11', 'noop', 'noop',\n",
+    "    'addx 21', 'addx -15', 'noop', 'noop', 'addx -3', 'addx 9', 'addx 1',\n",
+    "    'addx -3', 'addx 8', 'addx 1', 'addx 5', 'noop', 'noop', 'noop',\n",
+    "    'noop', 'noop', 'addx -36', 'noop', 'addx 1', 'addx 7', 'noop', 'noop',\n",
+    "    'noop', 'addx 2', 'addx 6', 'noop', 'noop', 'noop', 'noop', 'noop', 'addx 1',\n",
+    "    'noop', 'noop', 'addx 7', 'addx 1', 'noop', 'addx -13', 'addx 13', 'addx 7',\n",
+    "    'noop', 'addx 1', 'addx -33', 'noop', 'noop', 'noop', 'addx 2', 'noop',\n",
+    "    'noop', 'noop', 'addx 8', 'noop', 'addx -1', 'addx 2', 'addx 1', 'noop',\n",
+    "    'addx 17', 'addx -9', 'addx 1', 'addx 1', 'addx -3', 'addx 11', 'noop',\n",
+    "    'noop', 'addx 1', 'noop', 'addx 1', 'noop', 'noop', 'addx -13', 'addx -19',\n",
+    "    'addx 1', 'addx 3', 'addx 26', 'addx -30', 'addx 12', 'addx -1', 'addx 3',\n",
+    "    'addx 1', 'noop', 'noop', 'noop', 'addx -9', 'addx 18', 'addx 1', 'addx 2',\n",
+    "    'noop', 'noop', 'addx 9', 'noop', 'noop', 'noop', 'addx -1', 'addx 2',\n",
+    "    'addx -37', 'addx 1', 'addx 3', 'noop', 'addx 15', 'addx -21', 'addx 22',\n",
+    "    'addx -6', 'addx 1', 'noop', 'addx 2', 'addx 1', 'noop', 'addx -10', 'noop',\n",
+    "    'noop', 'addx 20', 'addx 1', 'addx 2', 'addx 2', 'addx -6', 'addx -11',\n",
+    "    'noop', 'noop', 'noop'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13140"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day10part1(instructions):\n",
+    "    sum = 0\n",
+    "    register = 1\n",
+    "    cycle = 0\n",
+    "    for instr in instructions:\n",
+    "        cycle += 1\n",
+    "        if instr[:4] == \"noop\":\n",
+    "            if (cycle-20) % 40 == 0:\n",
+    "                sum += cycle * register\n",
+    "        else:\n",
+    "            if (cycle-20) % 40 == 0:\n",
+    "                sum += cycle * register\n",
+    "            cycle += 1\n",
+    "            if (cycle-20) % 40 == 0:\n",
+    "                sum += cycle * register\n",
+    "            register += int(instr[5:])\n",
+    "    return sum\n",
+    "\n",
+    "day10part1(test_instructions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12840"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_instructions = file_to_list(\"./inputs/input10.txt\")\n",
+    "day10part1(final_instructions)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##..##..##..##..##..##..##..##..##..##..\n",
+      "###...###...###...###...###...###...###.\n",
+      "####....####....####....####....####....\n",
+      "#####.....#####.....#####.....#####.....\n",
+      "######......######......######......####\n",
+      "#######.......#######.......#######.....\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day10part2(instructions):\n",
+    "    register = 1\n",
+    "    cycle = 0\n",
+    "\n",
+    "    def run_cycle():\n",
+    "        nonlocal cycle\n",
+    "        if abs(register - (cycle%40)) < 2:\n",
+    "            print('#',end='')\n",
+    "        else:\n",
+    "            print('.',end='')\n",
+    "        cycle += 1\n",
+    "        if cycle % 40 == 0:\n",
+    "            print(\"\")\n",
+    "\n",
+    "    for instr in instructions:\n",
+    "        run_cycle()\n",
+    "        if instr[:4] == \"addx\":\n",
+    "            run_cycle()\n",
+    "            register += int(instr[5:])\n",
+    "\n",
+    "day10part2(test_instructions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "####.#..#...##.####.###....##.####.####.\n",
+      "...#.#.#.....#.#....#..#....#.#.......#.\n",
+      "..#..##......#.###..###.....#.###....#..\n",
+      ".#...#.#.....#.#....#..#....#.#.....#...\n",
+      "#....#.#..#..#.#....#..#.#..#.#....#....\n",
+      "####.#..#..##..#....###...##..#....####.\n"
+     ]
+    }
+   ],
+   "source": [
+    "day10part2(final_instructions)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solution part 2: ZKJFBJFZ"
+   ]
   }
  ],
  "metadata": {
