Fix style day 10 2022

--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -1238,9 +1238,9 @@
     "    def run_cycle():\n",
     "        nonlocal cycle\n",
     "        if abs(register - (cycle%40)) < 2:\n",
-    "            print('#',end='')\n",
+    "            print(\"#\",end=\"\")\n",
     "        else:\n",
-    "            print('.',end='')\n",
+    "            print(\".\",end=\"\")\n",
     "        cycle += 1\n",
     "        if cycle % 40 == 0:\n",
     "            print(\"\")\n",
