--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -20,12 +20,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy\n",
     "import numpy as np\n",
     "import re\n",
     "import string\n",
     "import sys\n",
     "from collections import defaultdict\n",
-    "from typing import List"
+    "from dataclasses import dataclass\n",
+    "from typing import List, Literal"
    ]
   },
   {
@@ -801,326 +803,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp = \"\"\"addx 15\n",
-    "addx -11\n",
-    "addx 6\n",
-    "addx -3\n",
-    "addx 5\n",
-    "addx -1\n",
-    "addx -8\n",
-    "addx 13\n",
-    "addx 4\n",
-    "noop\n",
-    "addx -1\n",
-    "addx 5\n",
-    "addx -1\n",
-    "addx 5\n",
-    "addx -1\n",
-    "addx 5\n",
-    "addx -1\n",
-    "addx 5\n",
-    "addx -1\n",
-    "addx -35\n",
-    "addx 1\n",
-    "addx 24\n",
-    "addx -19\n",
-    "addx 1\n",
-    "addx 16\n",
-    "addx -11\n",
-    "noop\n",
-    "noop\n",
-    "addx 21\n",
-    "addx -15\n",
-    "noop\n",
-    "noop\n",
-    "addx -3\n",
-    "addx 9\n",
-    "addx 1\n",
-    "addx -3\n",
-    "addx 8\n",
-    "addx 1\n",
-    "addx 5\n",
-    "noop\n",
-    "noop\n",
-    "noop\n",
-    "noop\n",
-    "noop\n",
-    "addx -36\n",
-    "noop\n",
-    "addx 1\n",
-    "addx 7\n",
-    "noop\n",
-    "noop\n",
-    "noop\n",
-    "addx 2\n",
-    "addx 6\n",
-    "noop\n",
-    "noop\n",
-    "noop\n",
-    "noop\n",
-    "noop\n",
-    "addx 1\n",
-    "noop\n",
-    "noop\n",
-    "addx 7\n",
-    "addx 1\n",
-    "noop\n",
-    "addx -13\n",
-    "addx 13\n",
-    "addx 7\n",
-    "noop\n",
-    "addx 1\n",
-    "addx -33\n",
-    "noop\n",
-    "noop\n",
-    "noop\n",
-    "addx 2\n",
-    "noop\n",
-    "noop\n",
-    "noop\n",
-    "addx 8\n",
-    "noop\n",
-    "addx -1\n",
-    "addx 2\n",
-    "addx 1\n",
-    "noop\n",
-    "addx 17\n",
-    "addx -9\n",
-    "addx 1\n",
-    "addx 1\n",
-    "addx -3\n",
-    "addx 11\n",
-    "noop\n",
-    "noop\n",
-    "addx 1\n",
-    "noop\n",
-    "addx 1\n",
-    "noop\n",
-    "noop\n",
-    "addx -13\n",
-    "addx -19\n",
-    "addx 1\n",
-    "addx 3\n",
-    "addx 26\n",
-    "addx -30\n",
-    "addx 12\n",
-    "addx -1\n",
-    "addx 3\n",
-    "addx 1\n",
-    "noop\n",
-    "noop\n",
-    "noop\n",
-    "addx -9\n",
-    "addx 18\n",
-    "addx 1\n",
-    "addx 2\n",
-    "noop\n",
-    "noop\n",
-    "addx 9\n",
-    "noop\n",
-    "noop\n",
-    "noop\n",
-    "addx -1\n",
-    "addx 2\n",
-    "addx -37\n",
-    "addx 1\n",
-    "addx 3\n",
-    "noop\n",
-    "addx 15\n",
-    "addx -21\n",
-    "addx 22\n",
-    "addx -6\n",
-    "addx 1\n",
-    "noop\n",
-    "addx 2\n",
-    "addx 1\n",
-    "noop\n",
-    "addx -10\n",
-    "noop\n",
-    "noop\n",
-    "addx 20\n",
-    "addx 1\n",
-    "addx 2\n",
-    "addx 2\n",
-    "addx -6\n",
-    "addx -11\n",
-    "noop\n",
-    "noop\n",
-    "noop\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['addx 15',\n",
-       " 'addx -11',\n",
-       " 'addx 6',\n",
-       " 'addx -3',\n",
-       " 'addx 5',\n",
-       " 'addx -1',\n",
-       " 'addx -8',\n",
-       " 'addx 13',\n",
-       " 'addx 4',\n",
-       " 'noop',\n",
-       " 'addx -1',\n",
-       " 'addx 5',\n",
-       " 'addx -1',\n",
-       " 'addx 5',\n",
-       " 'addx -1',\n",
-       " 'addx 5',\n",
-       " 'addx -1',\n",
-       " 'addx 5',\n",
-       " 'addx -1',\n",
-       " 'addx -35',\n",
-       " 'addx 1',\n",
-       " 'addx 24',\n",
-       " 'addx -19',\n",
-       " 'addx 1',\n",
-       " 'addx 16',\n",
-       " 'addx -11',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx 21',\n",
-       " 'addx -15',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx -3',\n",
-       " 'addx 9',\n",
-       " 'addx 1',\n",
-       " 'addx -3',\n",
-       " 'addx 8',\n",
-       " 'addx 1',\n",
-       " 'addx 5',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx -36',\n",
-       " 'noop',\n",
-       " 'addx 1',\n",
-       " 'addx 7',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx 2',\n",
-       " 'addx 6',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx 1',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx 7',\n",
-       " 'addx 1',\n",
-       " 'noop',\n",
-       " 'addx -13',\n",
-       " 'addx 13',\n",
-       " 'addx 7',\n",
-       " 'noop',\n",
-       " 'addx 1',\n",
-       " 'addx -33',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx 2',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx 8',\n",
-       " 'noop',\n",
-       " 'addx -1',\n",
-       " 'addx 2',\n",
-       " 'addx 1',\n",
-       " 'noop',\n",
-       " 'addx 17',\n",
-       " 'addx -9',\n",
-       " 'addx 1',\n",
-       " 'addx 1',\n",
-       " 'addx -3',\n",
-       " 'addx 11',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx 1',\n",
-       " 'noop',\n",
-       " 'addx 1',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx -13',\n",
-       " 'addx -19',\n",
-       " 'addx 1',\n",
-       " 'addx 3',\n",
-       " 'addx 26',\n",
-       " 'addx -30',\n",
-       " 'addx 12',\n",
-       " 'addx -1',\n",
-       " 'addx 3',\n",
-       " 'addx 1',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx -9',\n",
-       " 'addx 18',\n",
-       " 'addx 1',\n",
-       " 'addx 2',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx 9',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx -1',\n",
-       " 'addx 2',\n",
-       " 'addx -37',\n",
-       " 'addx 1',\n",
-       " 'addx 3',\n",
-       " 'noop',\n",
-       " 'addx 15',\n",
-       " 'addx -21',\n",
-       " 'addx 22',\n",
-       " 'addx -6',\n",
-       " 'addx 1',\n",
-       " 'noop',\n",
-       " 'addx 2',\n",
-       " 'addx 1',\n",
-       " 'noop',\n",
-       " 'addx -10',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'addx 20',\n",
-       " 'addx 1',\n",
-       " 'addx 2',\n",
-       " 'addx 2',\n",
-       " 'addx -6',\n",
-       " 'addx -11',\n",
-       " 'noop',\n",
-       " 'noop',\n",
-       " 'noop']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test = temp.strip().split(\"\\n\")\n",
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "test_instructions = [\n",
     "    'addx 15', 'addx -11', 'addx 6', 'addx -3', 'addx 5', 'addx -1', 'addx -8',\n",
     "    'addx 13', 'addx 4', 'noop', 'addx -1', 'addx 5', 'addx -1', 'addx 5',\n",
@@ -1147,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +838,7 @@
        "13140"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +876,7 @@
        "12840"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1282,6 +964,199 @@
    "metadata": {},
    "source": [
     "Solution part 2: ZKJFBJFZ"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 11: Monkey in the Middle"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class Monkey:\n",
+    "    items: List[int]\n",
+    "    op: Literal[\"add\", \"mul\", \"square\"]\n",
+    "    op_factor: int\n",
+    "    divisor: int\n",
+    "    true: int\n",
+    "    false: int\n",
+    "\n",
+    "test_monkeys = {\n",
+    "    0: Monkey([79, 98], \"mul\", 19, 23, 2, 3),\n",
+    "    1: Monkey([54, 65, 75, 74], \"add\", 6, 19, 2, 0),\n",
+    "    2: Monkey([79, 60, 97], \"square\", None, 13, 1, 3),\n",
+    "    3: Monkey([74], \"add\", 3, 17, 0, 1)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10605"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day11part1(monkeys: dict[int, Monkey]):\n",
+    "    monkeys = copy.deepcopy(monkeys)\n",
+    "    inspections = [0]*len(monkeys)\n",
+    "    for _ in range(20):\n",
+    "        for i in range(len(monkeys)):\n",
+    "            monkey = monkeys[i]\n",
+    "            for _ in range(len(monkey.items)):\n",
+    "                item = monkey.items.pop(0)\n",
+    "                match monkey.op:\n",
+    "                    case \"add\": item += monkey.op_factor\n",
+    "                    case \"mul\": item *= monkey.op_factor\n",
+    "                    case \"square\": item *= item\n",
+    "                inspections[i] += 1\n",
+    "                item = item // 3\n",
+    "                if item % monkey.divisor == 0:\n",
+    "                    receiver = monkey.true\n",
+    "                else:\n",
+    "                    receiver = monkey.false\n",
+    "                monkeys[receiver].items.append(item)\n",
+    "    inspections.sort(reverse=True)\n",
+    "    return inspections[0] * inspections[1]\n",
+    "\n",
+    "day11part1(test_monkeys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50616"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Parsed manually\n",
+    "final_monkeys = {\n",
+    "    0: Monkey([78, 53, 89, 51, 52, 59, 58, 85], \"mul\", 3, 5, 2, 7),\n",
+    "    1: Monkey([64], \"add\", 7, 2, 3, 6),\n",
+    "    2: Monkey([71, 93, 65, 82], \"add\", 5, 13, 5, 4),\n",
+    "    3: Monkey([67, 73, 95, 75, 56, 74], \"add\", 8, 19, 6, 0),\n",
+    "    4: Monkey([85, 91, 90], \"add\", 4, 11, 3, 1),\n",
+    "    5: Monkey([67, 96, 69, 55, 70, 83, 62], \"mul\", 2, 3, 4, 1),\n",
+    "    6: Monkey([53, 86, 98, 70, 64], \"add\", 6, 7, 7, 0),\n",
+    "    7: Monkey([88, 64], \"square\", None, 17, 2, 5)\n",
+    "}\n",
+    "day11part1(final_monkeys)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "The difficulty of part 2 is that 10000 rounds have to simulated (compared to 20 for part 1). Moreover, the worry level (variable `item`) is not divided by 3 after each inspection. The approach taken to solve part 1 would therefore eventually lead to an integer overflow. ([Integer overflow does not occur in Python](https://docs.python.org/3/library/exceptions.html#OverflowError), but the program would run into performance and memory issues).\n",
+    "\n",
+    "The solution is to perform an operation on `item` after each inspection to keep its value low. By using the remainder of `item` divided by the [least common multiple](https://en.wikipedia.org/wiki/Least_common_multiple) of the `divisor` of each monkey, we preserve the algebraic structure of all items.\n",
+    "\n",
+    "`item % lcm`\n",
+    "\n",
+    "$(a \\mod kn) \\mod n = a \\mod n$ for any $k \\in \\Z$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2713310158"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day11part2(monkeys: dict[int, Monkey]):\n",
+    "    monkeys = copy.deepcopy(monkeys)\n",
+    "    inspections = [0]*len(monkeys)\n",
+    "    lcm = 1\n",
+    "    for monkey in monkeys.values():\n",
+    "        lcm *= monkey.divisor\n",
+    "    for _ in range(10000):\n",
+    "        for i in range(len(monkeys)):\n",
+    "            monkey = monkeys[i]\n",
+    "            for _ in range(len(monkey.items)):\n",
+    "                item = monkey.items.pop(0)\n",
+    "                match monkey.op:\n",
+    "                    case \"add\": item += monkey.op_factor\n",
+    "                    case \"mul\": item *= monkey.op_factor\n",
+    "                    case \"square\": item *= item\n",
+    "                inspections[i] += 1\n",
+    "                item = item % lcm\n",
+    "                if item % monkey.divisor == 0:\n",
+    "                    receiver = monkey.true\n",
+    "                else:\n",
+    "                    receiver = monkey.false\n",
+    "                monkeys[receiver].items.append(item)\n",
+    "    inspections.sort(reverse=True)\n",
+    "    return inspections[0] * inspections[1]\n",
+    "\n",
+    "day11part2(test_monkeys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11309046332"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day11part2(final_monkeys)"
    ]
   }
  ],
