--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -25,9 +25,9 @@
     "import re\n",
     "import string\n",
     "import sys\n",
-    "from collections import defaultdict\n",
+    "from collections import defaultdict, deque\n",
     "from dataclasses import dataclass\n",
-    "from typing import List, Literal"
+    "from typing import Dict, List, Literal"
    ]
   },
   {
@@ -1157,6 +1157,227 @@
    ],
    "source": [
     "day11part2(final_monkeys)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 12: Hill Climbing Algorithm"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1\n",
+    "\n",
+    "`S`: current position (start); `E`: destination (end)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_heightmap = [\n",
+    "    \"Sabqponm\",\n",
+    "    \"abcryxxl\",\n",
+    "    \"accszExk\",\n",
+    "    \"acctuvwj\",\n",
+    "    \"abdefghi\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[45, 1, 2, 17, 16, 15, 14, 13],\n",
+       " [1, 2, 3, 18, 25, 24, 24, 12],\n",
+       " [1, 3, 3, 19, 26, 31, 24, 11],\n",
+       " [1, 3, 3, 20, 21, 22, 23, 10],\n",
+       " [1, 2, 4, 5, 6, 7, 8, 9]]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[string.ascii_letters.index(node)+1 for node in row] for row in test_heightmap]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find shortest path → breadth-first search with path tracing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reached 27 (idx: (2, 5))!\n",
+      "Length shortest path = 31\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day12part1(heightmap: List[str]):\n",
+    "    \"\"\"Breadth-first search with path tracing\"\"\"\n",
+    "    heightmap = [[string.ascii_letters.index(node)+1 for node in row] \n",
+    "                  for row in heightmap]\n",
+    "    start, end = None, None\n",
+    "    for i in range(len(heightmap)):\n",
+    "        for j in range(len(heightmap[0])):\n",
+    "            if heightmap[i][j] == 45:\n",
+    "                start = (i,j)\n",
+    "                heightmap[i][j] = 0\n",
+    "            elif heightmap[i][j] == 31:\n",
+    "                end = (i, j)\n",
+    "                heightmap[i][j] = 27\n",
+    "    queue = deque([[start]])\n",
+    "    explored = set([start])\n",
+    "    while queue:\n",
+    "        path = queue.popleft()\n",
+    "        node = path[-1]\n",
+    "        i, j = node\n",
+    "        height = heightmap[i][j]\n",
+    "        if node == end:\n",
+    "            print(f\"Reached {heightmap[i][j]} (idx: {node})!\")\n",
+    "            print(f\"Length shortest path = {len(path) - 1}\")\n",
+    "            return\n",
+    "        for direction in [(0, 1), (0, -1), (1, 0), (-1, 0)]:\n",
+    "            row, col = direction\n",
+    "            new_i = row + i\n",
+    "            new_j = col + j\n",
+    "            adjacent = (new_i, new_j)\n",
+    "            if ((0 <= new_i < len(heightmap)) \\\n",
+    "                and (0 <= new_j < len(heightmap[0]))):\n",
+    "                if ((heightmap[new_i][new_j] - height)  <= 1) \\\n",
+    "                    and (adjacent not in explored):\n",
+    "                    explored.add(adjacent)\n",
+    "                    new_path = list(path)\n",
+    "                    new_path.append(adjacent)\n",
+    "                    queue.append(new_path)\n",
+    "\n",
+    "day12part1(test_heightmap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reached 27 (idx: (20, 138))!\n",
+      "Length shortest path = 534\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_heightmap = file_to_list(\"./inputs/input12.txt\")\n",
+    "day12part1(final_heightmap)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reached 1 (idx: (4, 0))!\n",
+      "Length shortest path = 29\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day12part2(heightmap: List[str]):\n",
+    "    heightmap = [[string.ascii_letters.index(node)+1 for node in row]\n",
+    "                  for row in heightmap]\n",
+    "    start, end = None, None\n",
+    "    for i in range(len(heightmap)):\n",
+    "        for j in range(len(heightmap[0])):\n",
+    "            if heightmap[i][j] == 45:\n",
+    "                start = (i,j)\n",
+    "                heightmap[i][j] = 0\n",
+    "            elif heightmap[i][j] == 31:\n",
+    "                end = (i, j)\n",
+    "                heightmap[i][j] = 27\n",
+    "    queue = deque([[end]]) # Diff\n",
+    "    explored = set([end]) # Diff\n",
+    "    while queue:\n",
+    "        path = queue.popleft()\n",
+    "        node = path[-1]\n",
+    "        i, j = node\n",
+    "        height = heightmap[i][j]\n",
+    "        if height == 1: # Diff\n",
+    "            print(f\"Reached {heightmap[i][j]} (idx: {node})!\")\n",
+    "            print(f\"Length shortest path = {len(path) - 1}\")\n",
+    "            return\n",
+    "        for direction in [(0, 1), (0, -1), (1, 0), (-1, 0)]:\n",
+    "            row, col = direction\n",
+    "            new_i = row + i\n",
+    "            new_j = col + j\n",
+    "            adjacent = (new_i, new_j)\n",
+    "            if ((0 <= new_i < len(heightmap)) \\\n",
+    "                and (0 <= new_j < len(heightmap[0]))):\n",
+    "                if ((height - heightmap[new_i][new_j])  <= 1) \\\n",
+    "                    and (adjacent not in explored): # Diff\n",
+    "                    explored.add(adjacent)\n",
+    "                    new_path = list(path)\n",
+    "                    new_path.append(adjacent)\n",
+    "                    queue.append(new_path)\n",
+    "\n",
+    "day12part2(test_heightmap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reached 1 (idx: (29, 0))!\n",
+      "Length shortest path = 525\n"
+     ]
+    }
+   ],
+   "source": [
+    "day12part2(final_heightmap)"
    ]
   }
  ],
