--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -20,13 +20,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ast\n",
     "import copy\n",
+    "import itertools\n",
     "import numpy as np\n",
     "import re\n",
     "import string\n",
     "import sys\n",
     "from collections import defaultdict, deque\n",
     "from dataclasses import dataclass\n",
+    "from functools import cmp_to_key\n",
     "from typing import Dict, List, Literal"
    ]
   },
@@ -1378,6 +1381,228 @@
    ],
    "source": [
     "day12part2(final_heightmap)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 13: Distress Signal"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1\n",
+    "\n",
+    "Puzzle: What are is the sum of the indices of the pairs of packets that are in the right order?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_pairs = [\n",
+    "    ([1, 1, 3, 1, 1],[1, 1, 5, 1, 1]),\n",
+    "    ([[1], [2, 3, 4]], [[1], 4]),\n",
+    "    ([9], [[8, 7, 6]]),\n",
+    "    ([[4, 4], 4, 4], [[4, 4], 4, 4, 4]),\n",
+    "    ([7, 7, 7, 7], [7, 7, 7]),\n",
+    "    ([], [3]),\n",
+    "    ([[[]]], [[]]),\n",
+    "    ([1, [2, [3, [4, [5, 6, 7]]]], 8, 9], [1, [2, [3, [4, [5, 6, 0]]]], 8, 9])\n",
+    "]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1: True, 2: True, 3: False, 4: True, 5: False, 6: True, 7: False, 8: False\n",
+    "\n",
+    "Solution: 1 + 2 + 4 + 6 = 13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day13part1(pairs: List[tuple[any, any]]):\n",
+    "\n",
+    "    def recursion(a, b):\n",
+    "        \"\"\"Recursively compare packets a and b\"\"\"\n",
+    "        if isinstance(a, int) and isinstance(b, int):\n",
+    "            if a < b: return True\n",
+    "            elif a > b: return False\n",
+    "            else: return\n",
+    "        elif isinstance(a, list) and isinstance(b, list):\n",
+    "            for a_n, b_n in zip(a, b):\n",
+    "                res = recursion(a_n, b_n)\n",
+    "                if res is not None:\n",
+    "                    return res\n",
+    "            return recursion(len(a), len(b))\n",
+    "        else:\n",
+    "            a = [a] if not isinstance(a, list) else a\n",
+    "            b = [b] if not isinstance(b, list) else b\n",
+    "            return recursion(a, b)\n",
+    "\n",
+    "    right = 0\n",
+    "    for idx, (a, b) in enumerate(pairs, start=1):\n",
+    "        # Implicit type conversion: True=1; False=0\n",
+    "        right += (idx * recursion(a, b))\n",
+    "    return right\n",
+    "\n",
+    "day13part1(test_pairs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5252"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_pairs = file_to_list(\"./inputs/input13.txt\", \"\\n\\n\")\n",
+    "# Parse input by evaluating strings as literal Python structures\n",
+    "final_pairs = [tuple(map(ast.literal_eval, pair.split(\"\\n\"))) for pair in final_pairs]\n",
+    "day13part1(final_pairs)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1, 3, 1, 1],\n",
+       " [1, 1, 5, 1, 1],\n",
+       " [[1], [2, 3, 4]],\n",
+       " [[1], 4],\n",
+       " [9],\n",
+       " [[8, 7, 6]],\n",
+       " [[4, 4], 4, 4],\n",
+       " [[4, 4], 4, 4, 4],\n",
+       " [7, 7, 7, 7],\n",
+       " [7, 7, 7],\n",
+       " [],\n",
+       " [3],\n",
+       " [[[]]],\n",
+       " [[]],\n",
+       " [1, [2, [3, [4, [5, 6, 7]]]], 8, 9],\n",
+       " [1, [2, [3, [4, [5, 6, 0]]]], 8, 9],\n",
+       " [[2]],\n",
+       " [[6]]]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_packets = [packet for pair in test_pairs for packet in pair]\n",
+    "test_packets.extend([[[2]], [[6]]])\n",
+    "test_packets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day13part2(packets: List[any]):\n",
+    "\n",
+    "    def recursion(a, b):\n",
+    "        if isinstance(a, int) and isinstance(b, int):\n",
+    "            return a - b\n",
+    "        elif isinstance(a, list) and isinstance(b, list):\n",
+    "            for a_n, b_n in zip(a, b):\n",
+    "                diff = recursion(a_n, b_n)\n",
+    "                if diff:\n",
+    "                    return diff\n",
+    "            return recursion(len(a), len(b))\n",
+    "        else:\n",
+    "            a = [a] if not isinstance(a, list) else a\n",
+    "            b = [b] if not isinstance(b, list) else b\n",
+    "            return recursion(a, b)\n",
+    "\n",
+    "    packets.sort(key=cmp_to_key(recursion))\n",
+    "    return (packets.index([[2]])+1) * (packets.index([[6]])+1)\n",
+    "\n",
+    "day13part2(test_packets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20592"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_packets = [packet for pair in final_pairs for packet in pair]\n",
+    "final_packets.extend([[[2]], [[6]]])\n",
+    "day13part2(final_packets)"
    ]
   }
  ],
