--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -27,7 +27,7 @@
     "import re\n",
     "import string\n",
     "import sys\n",
-    "from collections import defaultdict, deque\n",
+    "from collections import defaultdict, deque, namedtuple\n",
     "from dataclasses import dataclass\n",
     "from functools import cmp_to_key\n",
     "from typing import Dict, List, Literal"
@@ -1603,6 +1603,211 @@
     "final_packets = [packet for pair in final_pairs for packet in pair]\n",
     "final_packets.extend([[[2]], [[6]]])\n",
     "day13part2(final_packets)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 14: Regolith Reservoir"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_traces = [\n",
+    "    \"498,4 -> 498,6 -> 496,6\",\n",
+    "    \"503,4 -> 502,4 -> 502,9 -> 494,9\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day14_part1(traces):\n",
+    "    Coordinate = namedtuple(\"Coordinate\", [\"x\", \"y\"])\n",
+    "    traces = [[Coordinate(*map(int, coord.split(\",\"))) for coord in trace.split(\" -> \")] for trace in traces]\n",
+    "\n",
+    "    # Build map of cave\n",
+    "    cave_map = np.full((1000, 1000), fill_value=\".\")\n",
+    "    for trace in traces:\n",
+    "        for i in range(len(trace) - 1):\n",
+    "            start, end = trace[i:i+2]\n",
+    "            if start.x - end.x == 0:\n",
+    "                # Vertical rock\n",
+    "                cave_map[min(start.y, end.y):max(start.y, end.y)+1, start.x] = \"#\"\n",
+    "            else:\n",
+    "                # Horizontal rock\n",
+    "                cave_map[start.y, min(start.x, end.x):max(start.x, end.x)+1] = \"#\"\n",
+    "    \n",
+    "    # Simulate sand\n",
+    "    def fall(coord: Coordinate):\n",
+    "        # Fall 1 down\n",
+    "        if cave_map[coord.y+1, coord.x] == \".\":\n",
+    "            coord = Coordinate(coord.x, coord.y+1)\n",
+    "        # Fall 1 down and 1 left\n",
+    "        elif cave_map[coord.y+1, coord.x-1] == \".\":\n",
+    "            coord = Coordinate(coord.x-1, coord.y+1)\n",
+    "        # Fall 1 down and 1 right\n",
+    "        elif cave_map[coord.y+1, coord.x+1] == \".\":\n",
+    "            coord = Coordinate(coord.x+1, coord.y+1)\n",
+    "        else:\n",
+    "            cave_map[coord.y, coord.x] = \"o\"\n",
+    "            return\n",
+    "        fall(coord)\n",
+    "\n",
+    "    count = 0\n",
+    "    while True:\n",
+    "        try:\n",
+    "            # (500, 0): sand origin\n",
+    "            fall(Coordinate(500, 0))\n",
+    "            count += 1\n",
+    "        except IndexError:\n",
+    "            break\n",
+    "    return count\n",
+    "\n",
+    "day14_part1(test_traces)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "843"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_traces = file_to_list(\"./inputs/input14.txt\")\n",
+    "day14_part1(final_traces)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "93"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day14_part2(traces):\n",
+    "    Coordinate = namedtuple(\"Coordinate\", [\"x\", \"y\"])\n",
+    "    traces = [[Coordinate(*map(int, coord.split(\",\"))) for coord in trace.split(\" -> \")] for trace in traces]\n",
+    "\n",
+    "    # Build map of cave\n",
+    "    floor = 2 + max([coord.y for trace in traces for coord in trace])\n",
+    "    cave_map = np.full((floor+1, 1000), fill_value=\".\")\n",
+    "    cave_map[floor, 0:1000] = \"#\"\n",
+    "    for trace in traces:\n",
+    "        for i in range(len(trace) - 1):\n",
+    "            start, end = trace[i:i+2]\n",
+    "            if start.x - end.x == 0:\n",
+    "                # Vertical rock\n",
+    "                cave_map[min(start.y, end.y):max(start.y, end.y)+1, start.x] = \"#\"\n",
+    "            else:\n",
+    "                # Horizontal rock\n",
+    "                cave_map[start.y, min(start.x, end.x):max(start.x, end.x)+1] = \"#\"\n",
+    "    \n",
+    "    # Simulate sand\n",
+    "    def fall(coord: Coordinate):\n",
+    "        # Fall 1 down\n",
+    "        if cave_map[coord.y+1, coord.x] == \".\":\n",
+    "            coord = Coordinate(coord.x, coord.y+1)\n",
+    "        # Fall 1 down and 1 left\n",
+    "        elif cave_map[coord.y+1, coord.x-1] == \".\":\n",
+    "            coord = Coordinate(coord.x-1, coord.y+1)\n",
+    "        # Fall 1 down and 1 right\n",
+    "        elif cave_map[coord.y+1, coord.x+1] == \".\":\n",
+    "            coord = Coordinate(coord.x+1, coord.y+1)\n",
+    "        else:\n",
+    "            cave_map[coord.y, coord.x] = \"o\"\n",
+    "            return\n",
+    "        fall(coord)\n",
+    "\n",
+    "    count = 0\n",
+    "    while True:\n",
+    "        if cave_map[0, 500] == \"o\":\n",
+    "            break\n",
+    "        try:\n",
+    "            # (500, 0): sand origin\n",
+    "            fall(Coordinate(500, 0))\n",
+    "            count += 1\n",
+    "        except IndexError:\n",
+    "            break\n",
+    "    return count\n",
+    "\n",
+    "day14_part2(test_traces)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27625"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day14_part2(final_traces)"
    ]
   }
  ],
