--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -1809,6 +1809,218 @@
    "source": [
     "day14_part2(final_traces)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 15: Beacon Exclusion Zone"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_reports = [\n",
+    "    \"Sensor at x=2, y=18: closest beacon is at x=-2, y=15\",\n",
+    "    \"Sensor at x=9, y=16: closest beacon is at x=10, y=16\",\n",
+    "    \"Sensor at x=13, y=2: closest beacon is at x=15, y=3\",\n",
+    "    \"Sensor at x=12, y=14: closest beacon is at x=10, y=16\",\n",
+    "    \"Sensor at x=10, y=20: closest beacon is at x=10, y=16\",\n",
+    "    \"Sensor at x=14, y=17: closest beacon is at x=10, y=16\",\n",
+    "    \"Sensor at x=8, y=7: closest beacon is at x=2, y=10\",\n",
+    "    \"Sensor at x=2, y=0: closest beacon is at x=2, y=10\",\n",
+    "    \"Sensor at x=0, y=11: closest beacon is at x=2, y=10\",\n",
+    "    \"Sensor at x=20, y=14: closest beacon is at x=25, y=17\",\n",
+    "    \"Sensor at x=17, y=20: closest beacon is at x=21, y=22\",\n",
+    "    \"Sensor at x=16, y=7: closest beacon is at x=15, y=3\",\n",
+    "    \"Sensor at x=14, y=3: closest beacon is at x=15, y=3\",\n",
+    "    \"Sensor at x=20, y=1: closest beacon is at x=15, y=3\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day15part1(reports, row):\n",
+    "    Coordinate = namedtuple(\"Coordinate\", [\"x\", \"y\"])\n",
+    "\n",
+    "    intervals = []\n",
+    "    for report in reports:\n",
+    "        sensor, beacon = report.split(\":\")\n",
+    "        sensor = Coordinate(*map(int, [num.split(\"=\")[-1] for num in sensor.split(\",\")]))\n",
+    "        beacon = Coordinate(*map(int, [coord.split(\"=\")[-1] for coord in beacon.split(\",\")]))\n",
+    "\n",
+    "        # Manhattan distance between sensor and beacon\n",
+    "        dist = abs(sensor.x - beacon.x) + abs(sensor.y - beacon.y)\n",
+    "        diff = dist - abs(sensor.y - row)\n",
+    "        if diff >= 0:\n",
+    "            intervals.append((sensor.x - diff, sensor.x + diff))\n",
+    "\n",
+    "        if beacon.y == row:\n",
+    "            intervals.append((beacon.x, beacon.x))\n",
+    "\n",
+    "    # Find the length of the intervals (without overlap)\n",
+    "    intervals.sort()\n",
+    "    union = []\n",
+    "    for interval in intervals:       \n",
+    "        if union and interval[0] <= union[-1][1]:\n",
+    "            union[-1] = (union[-1][0], max(union[-1][1], interval[1]))\n",
+    "        else:\n",
+    "            union.append(interval)\n",
+    "    length = sum(b - a for a, b in union)\n",
+    "    return length\n",
+    "\n",
+    "day15part1(test_reports, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5508234"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_reports = file_to_list(\"./inputs/input15.txt\")\n",
+    "day15part1(final_reports, 2000000)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Approach reusing the code from part 1. Assumes that the location of the distress beacon is the only point which is not covered by the sensors. The approach thus consists in testing for each y-coordinate between 0 and 2000000 whether any position (again, between 0 and 2000000) does not contain a beacon."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56000011"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day15part2(reports, maximum):\n",
+    "    Coordinate = namedtuple(\"Coordinate\", [\"x\", \"y\"])\n",
+    "\n",
+    "    sensors = []\n",
+    "    for report in reports:\n",
+    "        sensor, beacon = report.split(\":\")\n",
+    "        sensor = Coordinate(*map(int, [num.split(\"=\")[-1] for num in sensor.split(\",\")]))\n",
+    "        beacon = Coordinate(*map(int, [coord.split(\"=\")[-1] for coord in beacon.split(\",\")]))\n",
+    "        sensors.append((sensor, beacon))\n",
+    "\n",
+    "    for i in range(maximum):\n",
+    "        intervals = []\n",
+    "        for sensor, beacon in sensors:\n",
+    "            # Manhattan distance between sensor and beacon\n",
+    "            dist = abs(sensor.x - beacon.x) + abs(sensor.y - beacon.y)\n",
+    "            diff = dist - abs(sensor.y - i)\n",
+    "            if diff >= 0:\n",
+    "                intervals.append((sensor.x - diff, sensor.x + diff))\n",
+    "\n",
+    "            if beacon.y == i:\n",
+    "                intervals.append((beacon.x, beacon.x))\n",
+    "\n",
+    "        intervals.sort()\n",
+    "        union = []\n",
+    "        for interval in intervals:       \n",
+    "            if union and interval[0] <= union[-1][1]:\n",
+    "                union[-1] = (union[-1][0], max(union[-1][1], interval[1]))\n",
+    "            else:\n",
+    "                union.append(interval)\n",
+    "        length = 0\n",
+    "        for interval in union:\n",
+    "            length += 1\n",
+    "            if interval[1] >= 0:\n",
+    "                lower = interval[0] if interval[0] > 0 else 0\n",
+    "                upper = interval[1] if interval[1] < maximum else maximum - 1\n",
+    "                length += upper - lower\n",
+    "        if length < maximum:\n",
+    "            x = union[0][1] + 1\n",
+    "            y = i\n",
+    "            return x * 4000000 + y\n",
+    "\n",
+    "day15part2(test_reports, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10457634860779"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Computationally expensive (takes around 1 minute on my laptop)\n",
+    "day15part2(final_reports, 4000000)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "x = 2614408, y = 2860779\n",
+    "\n",
+    "Frequency = 2614408 * 4000000 + 2860779 = 10457634860779"
+   ]
   }
  ],
  "metadata": {
