--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -1995,21 +1995,10 @@
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10457634860779"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Computationally expensive (takes around 1 minute on my laptop)\n",
-    "day15part2(final_reports, 4000000)"
+    "# day15part2(final_reports, 4000000)"
    ]
   },
   {
@@ -2020,6 +2009,169 @@
     "x = 2614408, y = 2860779\n",
     "\n",
     "Frequency = 2614408 * 4000000 + 2860779 = 10457634860779"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 18: Boiling Boulders"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_lava_scan = [\n",
+    "    \"2,2,2\",\n",
+    "    \"1,2,2\",\n",
+    "    \"3,2,2\",\n",
+    "    \"2,1,2\",\n",
+    "    \"2,3,2\",\n",
+    "    \"2,2,1\",\n",
+    "    \"2,2,3\",\n",
+    "    \"2,2,4\",\n",
+    "    \"2,2,6\",\n",
+    "    \"1,2,5\",\n",
+    "    \"3,2,5\",\n",
+    "    \"2,1,5\",\n",
+    "    \"2,3,5\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day18part1(scan):\n",
+    "    cubes = set(tuple(ast.literal_eval(cube)) for cube in scan)\n",
+    "    \n",
+    "    sides = lambda x,y,z: [(x+1,y,z),(x-1,y,z),(x,y+1,z),(x,y-1,z),(x,y,z+1),(x,y,z-1)]\n",
+    "    surface = 0\n",
+    "    for cube in cubes:\n",
+    "        for side in sides(*cube):\n",
+    "            if side not in cubes:\n",
+    "                surface += 1\n",
+    "    return surface\n",
+    "\n",
+    "day18part1(test_lava_scan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4628"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_lava_scan = file_to_list(\"./inputs/input18.txt\")\n",
+    "day18part1(final_lava_scan)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day18part2(scan):\n",
+    "    cubes = set(tuple(ast.literal_eval(cube)) for cube in scan)\n",
+    "\n",
+    "    sides = lambda x,y,z: [(x+1,y,z),(x-1,y,z),(x,y+1,z),(x,y-1,z),(x,y,z+1),(x,y,z-1)]\n",
+    "    # Imagine that that the droplet is enclosed within a 25x25x25 cube\n",
+    "    # Breadth-first search to find all cubes that are reachable by starting in one corner\n",
+    "    visited = set()\n",
+    "    queue = [(-1,-1,-1)]\n",
+    "    while queue:\n",
+    "        location = queue.pop()\n",
+    "        for side in sides(*location):\n",
+    "            if ((side not in cubes) and (side not in visited)\n",
+    "            and all(-1 <= idx <= 24 for idx in side)):\n",
+    "                queue.append(side)\n",
+    "        visited.add(location)\n",
+    "\n",
+    "    # Part 1 but only for the cubes that are reachable\n",
+    "    surface = 0\n",
+    "    for cube in cubes:\n",
+    "        for side in sides(*cube):\n",
+    "            if side in visited:\n",
+    "                surface += 1\n",
+    "    return surface\n",
+    "\n",
+    "day18part2(test_lava_scan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2582"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day18part2(final_lava_scan)"
    ]
   }
  ],
